# EmojiNest

./: .gitignore  Cargo.toml  Trunk.toml  index.html  style.css
.github/workflows/: pages.yml
src/: app.rs  main.rs
src/components/: category_filter.rs  emoji_card.rs  emoji_grid.rs  mod.rs  recently_copied.rs  search_bar.rs  toast.rs
src/data/: emojis.rs  mod.rs
