[package]
name = "emojinest"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
]
