[package]
name = "emojinest"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.108"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen-futures = "0.4.58"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
]
